# autom8s-season-1

./: .gitignore  README.md
autom8s/: README.md  pyproject.toml
autom8s/projects/: README.md
autom8s/projects/infrastructure/: README.md
autom8s/projects/log_retrieval/: .pre-commit-config.yaml  PutKinesis.py  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup_env.sh
autom8s/projects/log_retrieval/13725414484/: -2147483648_Deploy Resources to AWS.txt  0_Deploy Resources to AWS.txt
autom8s/projects/log_retrieval/13725414484/Deploy Resources to AWS/: 15_Post Configure AWS Credentials  via OIDC.txt  16_Post Checkout repo.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout repo.txt  3_Configure AWS Credentials  via OIDC.txt  4_List files in the current directory.txt  5_Setup Terraform.txt  6_Allow GitHub Actions in EKS Public Access CIDRs.txt  7_Terraform Init.txt
autom8s/projects/log_retrieval/job_logs/: -2147483648_Deploy Resources to AWS.txt  0_Deploy Resources to AWS.txt
autom8s/projects/log_retrieval/job_logs/Deploy Resources to AWS/: 17_Post Configure AWS Credentials via OIDC.txt  18_Post Checkout repo.txt  19_Complete job.txt  1_Set up job.txt  2_Build hashicorpterraform-github-actions@master.txt  3_Checkout repo.txt  4_Configure AWS Credentials via OIDC.txt
autom8s/projects/log_retrieval/payloads/: autom8s_repo.json  challenge_repo.json
autom8s/projects/log_retrieval/src/: lumber.py  retrieve_logs.sh
autom8s/projects/log_retrieval/src/github_api/: connection.py  repository.py  workflows.py
(+4 files in other folders)
